# cocotter

./: .gitignore  README.md  index-DyS0xqk4.js  index.html
code/: BUILD.md  Cargo.toml  espflash.toml  sdkconfig.defaults
code/.cargo/: config.toml
code/boards/common/: Cargo.toml
code/boards/common/src/: esp.rs  hal.rs  lib.rs  mock.rs
code/boards/pami/: Cargo.toml
code/boards/pami/src/: esp.rs  lib.rs  mock.rs
code/boards/sabotter/: Cargo.toml  build.rs
code/boards/sabotter/src/: esp.rs  lib.rs  mock.rs
code/boards/simulator/: Cargo.toml
code/boards/simulator/src/: ble.rs  comm.rs  lib.rs
code/devices/esp32_encoder/: Cargo.toml
code/devices/esp32_encoder/src/: lib.rs
code/devices/tca6408/: Cargo.toml  README.md
code/devices/tca6408/src/: lib.rs
code/devices/vlx/: Cargo.toml  build.rs
code/devices/vlx/src/: bindings.rs  lib.rs
code/devices/vlx/src/l1/: mod.rs  platform.rs
code/devices/vlx/src/l5/: mod.rs  platform.rs
code/galipeur/: Cargo.toml  build.rs  espflash.toml  partitions.csv
code/galipeur/.cargo/: config.toml
code/galipeur/src/: asserv.rs  can.rs  can_ota_relay.rs  led.rs  lib.rs  main.rs  movement.rs  routines.rs  sch16t.rs  shared_gpio.rs  watched.rs
code/galipeur/src/can/: mod.rs  ota_relay.rs
code/galipeur/src/meca/: mod.rs  primitives.rs  proxy.rs  state.rs
code/galipeur/src/movement/: esp.rs  mod.rs  sim.rs
code/galipeur/src/sensors/: ld06.rs  mod.rs
code/galipeur/src/strat/: calibration.rs  errors.rs  mod.rs  utils.rs
code/libs/amatheur/: Cargo.toml
code/libs/amatheur/src/: lib.rs
code/libs/asserv/: Cargo.toml
code/libs/asserv/src/: asserv.rs  conf.rs  control_system.rs  lib.rs  maths.rs  motor_filter.rs  pid.rs  quadramp.rs  ramp.rs  rome.rs
code/libs/asserv/src/differential/: conf.rs  control_system.rs  mod.rs  motor_filter.rs  rome.rs
code/libs/asserv/src/holonomic/: conf.rs  control_system.rs  mod.rs  motor_filter.rs  rome.rs
code/libs/ble/: Cargo.toml
code/libs/ble/src/: game_controller.rs  lib.rs  ota.rs  ota_esp.rs  rome.rs  scan.rs
code/libs/boards/canon_2019/: Cargo.toml
code/libs/boards/canon_2019/src/: hardware.rs  lib.rs
code/libs/boards/old_pami_2023/src/: lib.rs
code/libs/boards/pami/: Cargo.toml
code/libs/boards/pami_2023/: Cargo.toml  rust-toolchain.toml
code/libs/boards/pami_2023/.cargo/: config.toml
code/libs/boards/pami_2023/src/: adc.rs  encoder.rs  lib.rs
code/libs/cancaner/: Cargo.toml  PROTOCOL.md
code/libs/cancaner/src/: esp.rs  interface.rs  lib.rs  log.rs  message.rs  ota.rs  protocol.rs  types.rs
code/libs/cocotter/: Cargo.toml
code/libs/cocotter/src/: lib.rs  motor_control.rs  pid.rs  ramp.rs
code/libs/cocotter/src/position/: holonomic.rs  mod.rs  regular.rs  robot_coordinate.rs
code/libs/cocotter/src/trajectory/: mod.rs  order.rs
code/libs/devices/: Cargo.toml
code/libs/devices/lsm6dso32/: lsm6dso32.rs
code/libs/devices/lsm6dso32x/: Cargo.toml
code/libs/devices/lsm6dso32x/src/: lib.rs  lsm6dso.rs
code/libs/devices/src/: lib.rs
code/libs/devices/src/lsm6dso/: lsm6dso.rs
code/libs/devices/tca6408a/: Cargo.toml
code/libs/devices/tca6408a/src/: lib.rs
code/libs/devices/tca6408a/tests/: tests.rs
code/libs/devices/vl53l5cx/: Cargo.toml  build.rs  debug.h
code/libs/devices/vl53l5cx/c_src/: changelog.txt
code/libs/devices/vl53l5cx/src/: lib.rs  platform.rs
code/libs/esp32_encoder/: Cargo.toml
code/libs/esp32_encoder/src/: lib.rs
code/libs/pathfinding/: Cargo.toml
code/libs/pathfinding/src/: lib.rs
code/libs/rome/: Cargo.toml  build.rs  rome.py  rome_messages.yaml
code/libs/rome/src/: deserialize.rs  lib.rs  message.rs  serialize.rs
code/libs/sch16t/: Cargo.toml
code/libs/sch16t/src/: lib.rs
code/libs/sim_client/: Cargo.toml
code/libs/sim_client/src/: lib.rs
code/libs/sim_protocol/: Cargo.toml
code/libs/sim_protocol/src/: lib.rs
code/libs/tca6408/: Cargo.toml
code/libs/tca6408/src/: lib.rs
code/libs/trajectory/: Cargo.toml
code/libs/trajectory/src/: lib.rs  motor_control.rs
code/libs/trajectory/src/position/: mod.rs  regular.rs  robot_coordinate.rs
code/libs/vlx/: Cargo.toml  build.rs
code/libs/vlx/c_src/: combined_bindgen.h  combined_config.h
code/libs/vlx/src/: bindings.rs  common.rs  esp.rs  i2c.rs  lib.rs
code/pami/: Cargo.toml
code/pami/.cargo/: config.toml
code/pami/src/: config.rs  events.rs  lib.rs  main.rs  pami_asserv.rs  pwm.rs  routines.rs  ui.rs
code/pami/src/pami_asserv/: esp.rs  mod.rs  sim.rs
code/picotter/: Cargo.toml  memory.x  rust-toolchain.toml
code/picotter-bootloader/: Cargo.toml  build.rs  memory.x
code/picotter-bootloader/src/: main.rs
code/picotter/.cargo/: config.toml
code/picotter/src/: arm.rs  can_handler.rs  can_logger.rs  can_protocol.rs  color_sensor.rs  ground_sensors.rs  i2c_devices.rs  main.rs  module.rs  ota_handler.rs  scs0009.rs
code/picotter/src/lidar/: m703a.rs  mod.rs
code/projects/canon/: Cargo.toml  build.rs  flash.sh  memory.x
code/projects/canon/.cargo/: config
code/projects/canon/src/: hall_sensors.rs  inputs.rs  main.rs  motor_controller.rs
code/projects/pami/: Cargo.toml  sdkconfig.defaults
code/projects/pami/.cargo/: config.toml
code/projects/pami/src/: asserv.rs  ble.rs  config.rs  main.rs  pwm.rs  sensors.rs
code/projects/test_pami/src/: main.rs
code/projects/ui/: ble.rs
code/projects/ui/robot-monitor/: README.md  package-lock.json  package.json
code/shared/comm/: Cargo.toml
code/shared/comm/src/: lib.rs
code/sim/: Cargo.toml
code/sim/cfg/: table.toml
code/sim/src/: app.rs  bridge.rs  collide.rs  config.rs  controls.rs  humans.rs  kinematics.rs  ld06_encoder.rs  main.rs  picotter_emu.rs  raycast.rs  server.rs  textures.rs  world.rs
code/sim/tests/: galipeur_moves.rs
code/tool/: cargo-blerun
code/tool/bleflash/: Cargo.toml
code/tool/bleflash/src/: main.rs
code/tool/onshape_fetch/: Cargo.toml
code/tool/onshape_fetch/scripts/: fetch-galipeur.sh  serve.sh
code/tool/onshape_fetch/src/: api.rs  auth.rs  filter.rs  main.rs  unpack.rs  url.rs
code/tool/onshape_fetch/viewer/: viewer.html
(+471 files in other folders)
