[workspace]
members = [
    "pami",
    "galipeur",

    "libs/asserv",
    "libs/ble",
    "libs/esp32_encoder",
    "libs/rome",
    "libs/tca6408",
    "libs/vlx",

    "boards/common",
    "boards/pami",
    "boards/sabotter",
    "boards/simulator",
]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
