[workspace]
members = [
    "pami",
    "galipeur",
    "picotter",
    "picotter-bootloader",

    "libs/amatheur",
    "libs/asserv",
    "libs/ble",
    "libs/cancaner",
    "libs/esp32_encoder",
    "libs/rome",
    "libs/sch16t",
    "libs/tca6408",
    "libs/vlx",

    "boards/common",
    "boards/pami",
    "boards/sabotter",
]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
