[workspace]
members = [
    "pami",
    "galipeur",
    "picotter",
    "picotter-bootloader",

    "libs/asserv",
    "libs/cancaner",
    "libs/ble",
    "libs/esp32_encoder",
    "libs/rome",
    "libs/tca6408",
    "libs/vlx",
    "libs/sch16t",
    "libs/sim_protocol",
    "libs/sim_client",

    "boards/common",
    "boards/pami",
    "boards/sabotter",

    "sim",
]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
