[package]
name = "galipeur"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "galipeur"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
smart-leds = "0.4.0"
asserv = { path = "../libs/asserv", features = ["rome"] }
cancaner = { path = "../libs/cancaner" }
board-sabotter = { path = "../boards/sabotter" }
rome = { path = "../libs/rome" }
sch16t = { path = "../libs/sch16t" }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
board-simulator = { path = "../boards/simulator" }

[target.'cfg(target_os = "espidf")'.dependencies]
embedded-hal = "1.0"
esp-idf-svc = "0.52"
ble = { path = "../libs/ble" }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
