[package]
name = "galipeur"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "galipeur"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
asserv = { path = "../libs/asserv" }
board-sabotter = { path = "../boards/sabotter" }
sch16t = { path = "../libs/sch16t" }

[target.'cfg(target_os = "espidf")'.dependencies]
embedded-hal = "1.0"
esp-idf-svc = "0.51"
ble = { path = "../libs/ble" }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
