[package]
name = "pami"
version = "0.1.0"
authors = ["Damien Espitallier <de.electronique@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pami"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

[dependencies]
log = "0.4"
phf = { version = "0.12.1", features = ["std", "macros"]}
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
heapless = "0.8"
uuid = { version = "1.0", default-features = false }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
board-simulator = { path = "../boards/simulator" }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.51"
embedded-graphics = "0.8"
board-pami = { path = "../boards/pami" }
ble = { path = "../libs/ble" }
vlx = { path = "../libs/vlx" }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
