[package]
name = "pami"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pami"

[dependencies]
flume = { version = "0.11", default-features = false }
embedded-graphics = "0.8"
embedded-hal = "1.0"
log = "0.4"
asserv = { path = "../libs/asserv", features = ["rome"] }
board-common = { path = "../boards/common" }
board-pami = { path = "../boards/pami" }
rome = { path = "../libs/rome" }
vlx = { path = "../libs/vlx" }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = "0.52"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
