[package]
name = "picotter"
version = "0.1.0"
edition = "2024"

[dependencies]
cancaner = { path = "../libs/cancaner", default-features = false }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1"
embassy-stm32 = { version = "0.4", features = ["stm32h562vg", "time-driver-any"] }
embassy-time = "0.5"
embassy-sync = "0.6"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
embedded-can = "0.4"
log = "0.4"
rtt-target = "0.6"
panic-rtt-target = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
static_cell = "2"
tcs3472 = { version = "1.0", features = ["async"] }
