[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sim"
path = "src/main.rs"

[dependencies]
sim_protocol = { path = "../libs/sim_protocol" }
cancaner = { path = "../libs/cancaner" }
embedded-can = "0.4"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
flume = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bevy = { version = "0.18", features = ["jpeg"] }
bevy_panorbit_camera = "0.34"
bevy_mod_outline = "0.12"
parry2d = "0.26"
png = "0.17"
fastrand = "2"

[dev-dependencies]
sim_client = { path = "../libs/sim_client" }
