[package]
name = "board-pami"
version = "0.1.0"
edition = "2021"

[dependencies] 
esp-idf-svc = {version = "0.51", features = ["experimental", "alloc"]}
vlx = { path = "../../libs/vlx" }
embedded-hal = "1.0.0"
log = "0.4.27"
embedded-hal-bus = { version = "0.3.0", features = ["std"] }
pwm-pca9685 = "1.0.0"

[features]
default = []
