[package]
name = "board-sabotter"
version = "0.1.0"
edition = "2024"

[dependencies] 
embedded-hal = "1.0"
embedded-hal-bus = { version = "0.3", features = ["std"] }
log = "0.4"
esp32_encoder = { path = "../../libs/esp32_encoder" }
pca9535 = { version = "2.0", features = ["std"] }
tca6408 = { path = "../../libs/tca6408" }
vlx = { path = "../../libs/vlx" }
ws2812-esp32-rmt-driver = { git = "https://github.com/DamienEspitallier/ws2812-esp32-rmt-driver", rev = "ae05c19", features = ["smart-leds-trait"] }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.52", features = ["experimental", "alloc"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
