[package]
name = "board-sabotter"
version = "0.1.0"
edition = "2024"

[dependencies] 
embedded-hal = "1.0"
embedded-hal-bus = { version = "0.3", features = ["std"] }
embedded-can = { version = "0.4" }
flume = { version = "0.11", default-features = false }
log = "0.4"
board-common = { path = "../common" }
cancaner = { path = "../../libs/cancaner" }
pca9535 = { version = "2.0", features = ["std"] }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.51", features = ["experimental", "alloc"] }
ble = { path = "../../libs/ble" }
esp32_encoder = { path = "../../libs/esp32_encoder" }

[target.'cfg(not(target_os = "espidf"))'.dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }

