[package]
name = "cocotter"
version = "0.2024.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.13.0", default-features = false }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
libm = "0.2.11"
log = "0.4.22"
