[package]
name = "canon"
version = "2024.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canon_2019 = {version = "2024.0.1", path = "../../libs/boards/canon_2019", features = []}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embassy-executor = {version = "0.2.0", path = "../../libs/embassy/embassy-executor" , features = ["arch-cortex-m", "executor-thread", "integrated-timers"]}
embassy-stm32 = { version = "0.1.0", path = "../../libs/embassy/embassy-stm32", features = ["nightly",  "unstable-pac", "stm32l4s5vi", "time-driver-any", "exti"]  }
embassy-time = { version = "0.1.0", path = "../../libs/embassy/embassy-time", features = ["tick-hz-32_768"] }
embassy-sync = { version = "0.2.0", path = "../../libs/embassy/embassy-sync", features = [] }
embassy-futures = { version = "0.1.0", path = "../../libs/embassy/embassy-futures", features = [] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
numtoa = "0.2.4"