[package]
name = "pami"
version = "0.1.0"
authors = ["Damien Espitallier <de.electronique@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pami"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
board-pami-2023 = { path = "../../libs/boards/pami_2023" }
embedded-hal = "1.0.0"
phf = { version = "0.11.3", default-features = false, features = ["macros"] }
cocotter = { path = "../../libs/cocotter" }
embedded-graphics = "0.8.1"
embedded-vintage-fonts = "0.2.0"

[build-dependencies]
embuild = "0.33"
