[package]
name = "bleflash"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
bluer = { version = "0.17", features = ["bluetoothd"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
futures = "0.3"
indicatif = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
uuid = "1"
