[package]
name = "onshape_fetch"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

httpdate = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
log = "0.4"
env_logger = "0.11"
url = "2"
