[package]
name = "board-pami-2023"
version = "2024.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.0"
embedded-hal = "1.0.0"
esp-hal = { version = "0.22.0", features = [ "esp32s3" ] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32s3", "integrated-timers"]}
pwm-pca9685 = { version = "1.0.0", features = ["async"]}
static_cell = "2.1.0"
tca6408a = { path = "../../devices/tca6408a" }
