[package]
name = "board-pami-2023"
version = "2024.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embedded-hal = "1.0.0"
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"]}
log = "0.4.22"
pwm-pca9685 = { version = "1.0.0", features = ["async"]}
static_cell = "2.1.0"
tca6408a = { path = "../../devices/tca6408a" }
lsm6dso32x = { path = "../../devices/lsm6dso32x" }
vl53l5cx = { path = "../../devices/vl53l5cx" }
esp-hal = "0.23.1"
embassy-embedded-hal = "0.3.0"
esp-wifi = { version = "0.12.0", features = ["esp32s3", "ble"]}
