[package]
name = "board-pami-2023"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[dependencies]
embedded-hal-bus = {version = "0.3.0", features = ["std"]}
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
pwm-pca9685 = { version = "1.0.0"}
ssd1306 = "0.10.0"
vl53l5cx = { path = "../../devices/vl53l5cx" }
tca6408a = { path = "../../devices/tca6408a" }
