[package]
name = "lsm6dso32x"
version = "0.2024.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
esp-hal = "0.23.1"
#esp-hal = { version = "0.22.0", features = [ "esp32s3" ] }
